# fastapi_prometheus

./: app.py  pyproject.toml
.devcontainer/: Dockerfile
